@@ -72,7 +72,6 @@
   </li>
 </ul>
 <h3 id='donate'>Donate</h3>
-<ul>
-<li><strong>BTC</strong>: 3NVw2seiTQddGQwc1apqudKxuTqebpyL3s</li>
-<li><strong>ETH</strong>: 0x60dd373f59862d9df776596889b997e24bee42eb</li>
-</ul>
+<p><img alt="uJhin's BTC" src="https://img.shields.io/badge/BTC-3NVw2seiTQddGQwc1apqudKxuTqebpyL3s-blue?style=flat-square&logo=bitcoin">
+<br/>
+<img alt="uJhin's ETH" src="https://img.shields.io/badge/ETH-0x60dd373f59862d9df776596889b997e24bee42eb-blue?style=flat-square&logo=ethereum"></p>
